Fixed language detection
git-svn-id: https://svn.viathinksoft.com/svn/spacemission@94 2cb2a291-5fe7-405d-a812-557228769704

--- a/ENU/LevEdit_DRC.rc
+++ b/ENU/LevEdit_DRC.rc
@@ -499,7 +499,7 @@ BEGIN
 	LevMain_SUnknownEnemyType,	L"???"
 	LevMain_SExitWithoutSave,	L"Close without saving?"
 	LevEdit_SAlreadyStarted,	L"The editor is already open"
-	LevEdit_STitel,	L"SpaceMission Leveleditor"
+	LevEdit_STitel,	L"SpaceMission Level Editor"
 	LevEdit_SFileMissing,	L"%s is missing. Please reinstall SpaceMission."
 	Vcl_OleConst_sNoRunningObject,	L"Unable to retrieve a pointer to a running object registered with OLE for %s/%s"
 	Vcl_EdgeConst_SWebViewFailure,	L"Edge-Browser control could not be created"
@@ -634,18 +634,18 @@ BEGIN
 	Vcl_Consts_SCannotOpenClipboard,	L"Cannot open clipboard: %s"
 	Vcl_Consts_SInvalidMemoSize,	L"Text exceeds memo capacity"
 	Vcl_Consts_SInvalidPrinterOp,	L"Operation not supported on selected printer"
-	Vcl_Consts_SNoDefaultPrinter,	L"Aktuell ist kein Standarddrucker ausgew\x00E4hlt"
-	Vcl_Consts_SDuplicateMenus,	L"Men\x00FC '%s' wird bereits von einem anderen Formular verwendet"
+	Vcl_Consts_SNoDefaultPrinter,	L"Currently no default printer is selected"
+	Vcl_Consts_SDuplicateMenus,	L"Men\x00FC '%s' is already used for a different form"
 	Vcl_Consts_SDockedCtlNeedsName,	L"Docked control must have a name"
 	Vcl_Consts_SDockTreeRemoveError,	L"Error removing control from dock tree"
 	Vcl_Consts_SDockZoneNotFound,	L" - Dock zone not found"
 	Vcl_Consts_SDockZoneHasNoCtl,	L" - Dock zone has no control"
 	Vcl_Consts_SDockZoneVersionConflict,	L"Error loading dock zone from the stream. Expecting version %d, but found %d."
 	Vcl_Consts_SPromptArrayTooShort,	L"L\x00E4nge des Werte-Arrays muss >= der L\x00E4nge des Prompt-Arrays sein"
-	Vcl_Consts_SPromptArrayEmpty,	L"Prompt-Array darf nicht leer sein"
-	Vcl_Consts_SUsername,	L"&Benutzername"
-	Vcl_Consts_SPassword,	L"&Passwort"
-	Vcl_Consts_SmkcSpace,	L"Leer"
+	Vcl_Consts_SPromptArrayEmpty,	L"Prompt array must not be empty"
+	Vcl_Consts_SUsername,	L"&Username"
+	Vcl_Consts_SPassword,	L"&Password"
+	Vcl_Consts_SmkcSpace,	L"Space"
 	Vcl_Consts_SmkcPgUp,	L"PgUp"
 	Vcl_Consts_SmkcPgDn,	L"PgDn"
 	Vcl_Consts_SmkcEnd,	L"End"
@@ -688,7 +688,7 @@ BEGIN
 	Vcl_Consts_SVEnhMetafiles,	L"Enhanced Metafiles"
 	Vcl_Consts_SVIcons,	L"Icons"
 	Vcl_Consts_SVBitmaps,	L"Bitmaps"
-	Vcl_Consts_SVTIFFImages,	L"TIFF-Grafiken"
+	Vcl_Consts_SVTIFFImages,	L"TIFF graphics"
 	Vcl_Consts_SMsgDlgWarning,	L"Warning"
 	Vcl_Consts_SMsgDlgError,	L"Error"
 	Vcl_Consts_SMsgDlgInformation,	L"Information"
@@ -698,18 +698,18 @@ BEGIN
 	Vcl_Consts_SNotPrinting,	L"Printer is not currently printing"
 	Vcl_Consts_SPrinting,	L"Printing in progress"
 	Vcl_Consts_SPrinterIndexError,	L"Printer index out of range"
-	Vcl_Consts_SInvalidPrinter,	L"Ausgew\x00E4hlter Drucker ist ung\x00FCltig"
+	Vcl_Consts_SInvalidPrinter,	L"Selected printer is invalid"
 	Vcl_Consts_SDeviceOnPort,	L"%s on %s"
-	Vcl_Consts_SGroupIndexTooLow,	L"GroupIndex darf nicht kleiner sein als der GroupIndex eines vorherigen Men\x00FCelements"
-	Vcl_Consts_SNoMDIForm,	L"Formular kann nicht erstellt werden. Aktuell sind keine MDI-Formulare aktiv"
-	Vcl_Consts_SImageCanvasNeedsBitmap,	L"Ein Bild kann nur ge\x00E4ndert werden, wenn es ein Bitmap enth\x00E4lt"
+	Vcl_Consts_SGroupIndexTooLow,	L"GroupIndex must not be smaller than the GroupIndex of a previous menu item"
+	Vcl_Consts_SNoMDIForm,	L"Form cannot be created. Currently no MDI forms are active"
+	Vcl_Consts_SImageCanvasNeedsBitmap,	L"A picture can only be changed if it contains a bitmap"
 	Vcl_Consts_SControlParentSetToSelf,	L"A control cannot have itself as its parent"
-	Vcl_Consts_SControlNonMainThreadUsage,	L"Steuerelement '%s' wird nicht f\x00FCr einen Haupt-Thread verwendet"
+	Vcl_Consts_SControlNonMainThreadUsage,	L"Control '%s' is not used for a main thread"
 	Vcl_Consts_SOKButton,	L"OK"
 	Vcl_Consts_SCancelButton,	L"Cancel"
 	Vcl_Consts_SYesButton,	L"&Yes"
 	Vcl_Consts_SNoButton,	L"&No"
-	Vcl_Consts_SImageIndexError,	L"Ung\x00FCltiger ImageList-Index"
+	Vcl_Consts_SImageIndexError,	L"Invalid ImageList index"
 	Vcl_Consts_SImageReadFail,	L"Failed to read ImageList data from stream"
 	Vcl_Consts_SImageWriteFail,	L"Failed to write ImageList data to stream"
 	Vcl_Consts_SWindowDCError,	L"Error creating window device context"
@@ -731,28 +731,28 @@ BEGIN
 	Vcl_Consts_SChangeWicSize,	L"Die Gr\x00F6\x00DFe einer WIC-Grafik kann nicht ver\x00E4ndert werden"
 	Vcl_Consts_SOleGraphic,	L"Invalid operation on TOleGraphic"
 	Vcl_Consts_SUnknownExtension,	L"Unknown picture file extension (.%s)"
-	Vcl_Consts_SUnknownClipboardFormat,	L"Nicht unterst\x00FCtztes Zwischenablagenformat"
-	Vcl_Consts_SUnknownStreamFormat,	L"Nicht unterst\x00FCtztes Stream-Format"
-	Vcl_Consts_SOutOfResources,	L"Systemressourcen ersch\x00F6pft"
-	Vcl_Consts_SNoCanvasHandle,	L"Canvas erlaubt kein Zeichnen"
-	Vcl_Consts_SInvalidTextFormatFlag,	L"Das Textformat-Flag '%s' wird nicht unterst\x00FCtzt"
-	Vcl_Consts_SInvalidFrameIndex,	L"Ung\x00FCltiger Bild-Frame-Index %d: es sind %d Frames vorhanden (0-%d)"
+	Vcl_Consts_SUnknownClipboardFormat,	L"Clipboard format not supported"
+	Vcl_Consts_SUnknownStreamFormat,	L"Stream format not supported"
+	Vcl_Consts_SOutOfResources,	L"System resources are exhausted"
+	Vcl_Consts_SNoCanvasHandle,	L"Canvas does not allow characters"
+	Vcl_Consts_SInvalidTextFormatFlag,	L"Text format flag '%s' is not supported"
+	Vcl_Consts_SInvalidFrameIndex,	L"Invalid picture frame index %d: there are %d frames available (0-%d)"
 	Vcl_Consts_SInvalidImageSize,	L"Invalid image size"
 	Vcl_Consts_SInvalidImageList,	L"Invalid ImageList"
 	Vcl_Consts_SReplaceImage,	L"Unable to Replace Image"
-	Vcl_Consts_SInsertImage,	L"Bild kann nicht eingef\x00FCgt werden"
-	System_RTLConsts_SWinRTInstanceError,	L"Instanz der Klasse %s kann nicht erstellt werden"
-	System_RTLConsts_sObserverUnsupported,	L"Observer wird nicht unterst\x00FCtzt"
+	Vcl_Consts_SInsertImage,	L"Picture cannot be inserted"
+	System_RTLConsts_SWinRTInstanceError,	L"Instance of class %s cannot be created"
+	System_RTLConsts_sObserverUnsupported,	L"Observer is not supported"
 	System_RTLConsts_sObserverMultipleSingleCast,	L"Der Observer-Kollektion k\x00F6nnen nicht mehrere Einfach-Typumwandlungs-Observer hinzugef\x00FCgt werden"
 	System_RTLConsts_sObserverNoInterface,	L"Das Objekt implementiert das Observer-Interface nicht"
 	System_RTLConsts_sObserverNoSinglecastFound,	L"Der Observer-Kollektion wurde kein Einfach-Typumwandlungs-Observer mit der ID %d hinzugef\x00FCgt"
 	System_RTLConsts_sObserverNoMulticastFound,	L"Der Observer-Kollektion wurde kein Mehrfach-Typumwandlungs-Observer mit der ID %d hinzugef\x00FCgt"
-	System_RTLConsts_sObserverNotAvailable,	L"Observer ist nicht verf\x00FCgbar"
+	System_RTLConsts_sObserverNotAvailable,	L"Observer is not available"
 	System_RTLConsts_SInvalidDateString,	L"Invalid date string: %s"
 	System_RTLConsts_SInvalidTimeString,	L"Invalid time string: %s"
-	System_RTLConsts_SInvalidOffsetString,	L"Ung\x00FCltiger Zeit-Offset-String: %s"
-	System_RTLConsts_sMustWaitOnOneEvent,	L"Es muss auf mindestens ein Ereignis gewartet werden"
-	System_RTLConsts_sBeginInvokeDestroying,	L"BeginInvoke kann bei der Freigabe f\x00FCr TComponent nicht aufgerufen werden"
+	System_RTLConsts_SInvalidOffsetString,	L"Invalid time offset string: %s"
+	System_RTLConsts_sMustWaitOnOneEvent,	L"Waiting for at least one event"
+	System_RTLConsts_sBeginInvokeDestroying,	L"BeginInvoke cannot be called to free TComponent"
 	Vcl_Consts_SInvalidBitmap,	L"Bitmap image is not valid"
 	Vcl_Consts_SInvalidIcon,	L"Icon image is not valid"
 	Vcl_Consts_SInvalidMetafile,	L"Metafile is not valid"
@@ -785,42 +785,42 @@ BEGIN
 	System_RTLConsts_SServiceNotFound,	L"Angegebener Dienst f\x00FCr die Anmeldeinformationen nicht gefunden"
 	System_RTLConsts_SVersionStr,	L"%s (Version %d.%d, Build %d, %5:s)"
 	System_RTLConsts_SSPVersionStr,	L"%s Service Pack %4:d (Version %1:d.%2:d, Build %3:d, %5:s)"
-	System_RTLConsts_SVersion32,	L"32-Bit-Edition"
-	System_RTLConsts_SVersion64,	L"64-Bit-Edition"
+	System_RTLConsts_SVersion32,	L"32 bit edition"
+	System_RTLConsts_SVersion64,	L"64 bit edition"
 	System_RTLConsts_SWindows,	L"Windows"
 	System_RTLConsts_SWindowsVista,	L"Windows Vista"
 	System_RTLConsts_sSpinCountOutOfRange,	L"SpinCount au\x00DFerhalb des Bereichs. Muss zwischen 0 und %d liegen"
-	System_RTLConsts_sTimespanTooLong,	L"TimeSpan zu lang"
+	System_RTLConsts_sTimespanTooLong,	L"TimeSpan too long"
 	System_RTLConsts_sInvalidTimespanDuration,	L"Die Dauer kann nicht zur\x00FCckgegeben werden, weil der absolute Wert den Wert von TTimeSpan.MaxValue \x00FCberschreitet"
-	System_RTLConsts_sTimespanValueCannotBeNan,	L"Wert darf nicht NaN"
+	System_RTLConsts_sTimespanValueCannotBeNan,	L"Wert must not be NaN"
 	System_RTLConsts_sCannotNegateTimespan,	L"Negation des Minimalwertes einer Zeitspanne ist ung\x00FCltig"
-	System_RTLConsts_sInvalidTimespanFormat,	L"Ung\x00FCltiges TimeSpan-Format"
+	System_RTLConsts_sInvalidTimespanFormat,	L"Invalid TimeSpan format"
 	System_RTLConsts_sTimespanElementTooLong,	L"TimeSpan-Element zu lang"
 	System_RTLConsts_SNoContext,	L"No context-sensitive help installed"
-	System_RTLConsts_SNoContextFound,	L"Keine Hilfe f\x00FCr Kontext %d gefunden"
+	System_RTLConsts_SNoContextFound,	L"No help available for context %d"
 	System_RTLConsts_SNoIndex,	L"Unable to open Index"
 	System_RTLConsts_SNoSearch,	L"Unable to open Search"
 	System_RTLConsts_SNoTableOfContents,	L"Unable to find a Table of Contents"
 	System_RTLConsts_SNoTopics,	L"No topic-based help system installed"
 	System_RTLConsts_SNothingFound,	L"No help found for %s"
-	System_RTLConsts_SArgumentOutOfRange,	L"Argument au\x00DFerhalb des Bereichs"
-	System_RTLConsts_SArgumentNil,	L"Argument darf nicht nil sein"
+	System_RTLConsts_SArgumentOutOfRange,	L"Argument outside of valid range"
+	System_RTLConsts_SArgumentNil,	L"Argument must not be Nil"
 	System_RTLConsts_SThreadExternalCheckTerminated,	L"CheckTerminated kann nicht f\x00FCr einen extern erstellten Thread aufgerufen werden"
 	System_RTLConsts_SThreadExternalSetReturnValue,	L"SetReturnValue kann nicht f\x00FCr einen extern erstellten Thread aufgerufen werden"
 	System_RTLConsts_SParamIsNil,	L"Parameter %s darf nicht Nil sein"
 	System_RTLConsts_SParamIsNegative,	L"Parameter %s darf kein negativer Wert sein"
 	System_RTLConsts_SInputBufferExceed,	L"Eingabepuffer f\x00FCr %s = %d, %s = %d \x00FCberschritten"
-	System_RTLConsts_SInvalidCharsInPath,	L"Ung\x00FCltige Zeichen im Pfad"
-	System_RTLConsts_SInvalidCharsInFileName,	L"Ung\x00FCltige Zeichen im Dateinamen"
-	System_RTLConsts_SEmptyFileName,	L"Dateiname ist leer"
-	System_RTLConsts_SPathTooLong,	L"Der angegebene Pfad ist zu lang"
+	System_RTLConsts_SInvalidCharsInPath,	L"Invalid character in file path"
+	System_RTLConsts_SInvalidCharsInFileName,	L"Invalid character in file name"
+	System_RTLConsts_SEmptyFileName,	L"Filename is empty"
+	System_RTLConsts_SPathTooLong,	L"The path is too long"
 	System_RTLConsts_SDriveNotFound,	L"Das Laufwerk wurde nicht gefunden"
 	System_RTLConsts_hNoFilterViewer,	L"No help viewer that supports filters"
 	System_RTLConsts_sArgumentInvalid,	L"Invalid argument"
 	System_RTLConsts_sInvalidStringAndObjectArrays,	L"Die L\x00E4nge von String- und Objekt-Arrays muss gleich sein"
 	System_RTLConsts_sSameArrays,	L"Quell- und Ziel-Arrays d\x00FCrfen nicht gleich sein"
 	System_RTLConsts_sNoConstruct,	L"Class %s is not intended to be constructed"
-	System_RTLConsts_sInvalidTimeoutValue,	L"Ung\x00FCltiger Wert f\x00FCr Zeit\x00FCberschreitung: %s"
+	System_RTLConsts_sInvalidTimeoutValue,	L"Invalid value for timeout: %s"
 	System_RTLConsts_SReadError,	L"Stream read error"
 	System_RTLConsts_SReadOnlyProperty,	L"Property is read-only"
 	System_RTLConsts_SRegCreateFailed,	L"Failed to create key %s"
@@ -857,7 +857,7 @@ BEGIN
 	System_SysConst_SInvalidDestinationIndex,	L"Invalid destination index (%d)"
 	System_SysConst_SInvalidCodePage,	L"Invalid code page"
 	System_SysConst_SInvalidEncodingName,	L"Invalid coding name"
-	System_SysConst_SNoMappingForUnicodeCharacter,	L"Keine Zuordnung f\x00FCr Unicode-Zeichen in der Multibyte-Zielcodeseite vorhanden"
+	System_SysConst_SNoMappingForUnicodeCharacter,	L"No mapping for Unicode character in the target Multibyte code page found"
 	System_SysConst_SInvalidStringBaseIndex,	L"Invalid StringBaseIndex"
 	System_RTLConsts_SAncestorNotFound,	L"Ancestor for '%s' not found"
 	System_RTLConsts_SAssignError,	L"Cannot assign a %s to a %s"
