--- a/ENU/SpaceMission_DRC.rc
+++ b/ENU/SpaceMission_DRC.rc
@@ -615,12 +615,12 @@ BEGIN
 	Vcl_Imaging_pnglang_EPNGInvalidPaletteText,	L"The ""Portable Network Graphics"" image contains an invalid palette."
 	Vcl_Imaging_pnglang_EPNGInvalidFileHeaderText,	L"Die gerade gelesene Datei ist kein g\x00FCltiges PNG-Bild (""Portable Network Graphics""), weil sie keinen g\x00FCltigen Header enth\x00E4lt. Diese Datei ist m\x00F6glicherweise besch\x00E4digt. Versuchen Sie, eine neue Version davon zu bekommen"
 	Vcl_Imaging_pnglang_EPNGIHDRNotFirstText,	L"This ""Portable Network Graphics"" image is not supported or it might be invalid.\r\n(IHDR chunk is not the first)"
-	Vcl_Imaging_pnglang_EPNGSizeExceedsText,	L"Dieses PNG-Bild (Portable Network Graphics) wird nicht unterst\x00FCtzt, weil die Breite oder H\x00F6he die maximale Gr\x00F6\x00DFe von 65535 Pixel \x00FCberschreitet."
+	Vcl_Imaging_pnglang_EPNGSizeExceedsText,	L"This PNG image (Portable Network Graphics) is not supported because width or height exceeds 65535 pixels."
 	Vcl_Imaging_pnglang_EPNGUnknownPalEntryText,	L"There is no such palette entry."
 	Vcl_Imaging_pnglang_EPNGUnknownCriticalChunkText,	L"This ""Portable Network Graphics"" image contains an unknown critical part which could not be decoded."
 	Vcl_Imaging_pnglang_EPNGUnknownCompressionText,	L"This ""Portable Network Graphics"" image is encoded with an unknown compression scheme which could not be decoded."
 	Vcl_Imaging_pnglang_EPNGUnknownInterlaceText,	L"This ""Portable Network Graphics"" image uses an unknown interlace scheme which could not be decoded."
-	Vcl_Imaging_pnglang_EPNGUnknownColorTypeText,	L"Dieses PNG-Bild (Portable Network Graphics) verwendet einen unbekannten Farbtyp, der nicht decodiert werden konnte."
+	Vcl_Imaging_pnglang_EPNGUnknownColorTypeText,	L"This PNG image (Portable Network Graphics) contains an unknown color type which cannot be decoded."
 	DXConsts_SListIndexError,	L"Index of the list exceeds the range. (%d)"
 	DXConsts_SScanline,	L"Index of the scanning line exceeded the range. (%d)"
 	DXConsts_SNoForm,	L"Form not found"
@@ -659,9 +659,9 @@ BEGIN
 	Vcl_Consts_SStyleInvalidParameter,	L"Paramter %s must not be nil"
 	Vcl_Consts_SStyleFeatureNotSupported,	L"Function is not supported by this style"
 	Vcl_Consts_SStyleNotRegistered,	L"Style '%s' is not registered"
-	Vcl_Consts_SStyleUnregisterError,	L"Die Registrierung des Systemstils kann nicht aufgehoben werden"
+	Vcl_Consts_SStyleUnregisterError,	L"The registry of the system style cannot be removed"
 	Vcl_Consts_SStyleNotRegisteredNoName,	L"Style not registered"
-	Vcl_Consts_sBeginInvokeNoHandle,	L"BeginInvoke kann nicht ohne \x00FCbergeordnetes Element oder Fenster-Handle aufgerufen werden"
+	Vcl_Consts_sBeginInvokeNoHandle,	L"BeginInvoke cannot be called without superior window or window handle"
 	System_Win_ComConst_SOleError,	L"OLE error %.8x"
 	System_Win_ComConst_SNoMethod,	L"Method '%s' not supported by automation object"
 	System_Win_ComConst_SVarNotObject,	L"Variant does not reference an automation object"
@@ -691,13 +691,13 @@ BEGIN
 	Vcl_Consts_SInvalidMemoSize,	L"Text exceeds memo capacity"
 	Vcl_Consts_SInvalidPrinterOp,	L"Operation not supported on selected printer"
 	Vcl_Consts_SNoDefaultPrinter,	L"No default printer selected"
-	Vcl_Consts_SDuplicateMenus,	L"Men\x00FC '%s' wird bereits von einem anderen Formular verwendet"
+	Vcl_Consts_SDuplicateMenus,	L"Menu '%s' is already used by another form"
 	Vcl_Consts_SDockedCtlNeedsName,	L"Docked control must have a name"
 	Vcl_Consts_SDockTreeRemoveError,	L"Error removing control from dock tree"
 	Vcl_Consts_SDockZoneNotFound,	L" - Dock zone not found"
 	Vcl_Consts_SDockZoneHasNoCtl,	L" - Dock zone has no control"
 	Vcl_Consts_SDockZoneVersionConflict,	L"Error loading dock zone from the stream. Expecting version %d, but found %d."
-	Vcl_Consts_SPromptArrayTooShort,	L"L\x00E4nge des Werte-Arrays muss >= der L\x00E4nge des Prompt-Arrays sein"
+	Vcl_Consts_SPromptArrayTooShort,	L"Length of the value array must >= length of prompt array"
 	Vcl_Consts_SPromptArrayEmpty,	L"Prompt array must not be empty"
 	Vcl_Consts_SUsername,	L"&User name"
 	Vcl_Consts_SPassword,	L"&Password"
@@ -756,9 +756,9 @@ BEGIN
 	Vcl_Consts_SPrinterIndexError,	L"Printer index out of range"
 	Vcl_Consts_SInvalidPrinter,	L"Selected printer is invalid"
 	Vcl_Consts_SDeviceOnPort,	L"%s on %s"
-	Vcl_Consts_SGroupIndexTooLow,	L"GroupIndex darf nicht kleiner sein als der GroupIndex eines vorherigen Men\x00FCelements"
-	Vcl_Consts_SNoMDIForm,	L"Formular kann nicht erstellt werden. Aktuell sind keine MDI-Formulare aktiv"
-	Vcl_Consts_SImageCanvasNeedsBitmap,	L"Ein Bild kann nur ge\x00E4ndert werden, wenn es ein Bitmap enth\x00E4lt"
+	Vcl_Consts_SGroupIndexTooLow,	L"GroupIndex must not be smaller than the GroupIndex of a previous menu item"
+	Vcl_Consts_SNoMDIForm,	L"Form cannot be created. Currently no MDI forms are active"
+	Vcl_Consts_SImageCanvasNeedsBitmap,	L"A picture can only be changed if it contains a bitmap"
 	Vcl_Consts_SControlParentSetToSelf,	L"A control cannot have itself as its parent"
 	Vcl_Consts_SControlNonMainThreadUsage,	L"Control '%s' cannot be used for a main thread"
 	Vcl_Consts_SOKButton,	L"OK"
@@ -784,21 +784,21 @@ BEGIN
 	Vcl_Consts_SInvalidImage,	L"Invalid image"
 	Vcl_Consts_SScanLine,	L"Scan line index out of range"
 	Vcl_Consts_SChangeIconSize,	L"Cannot change the size of an icon"
-	Vcl_Consts_SChangeWicSize,	L"Die Gr\x00F6\x00DFe einer WIC-Grafik kann nicht ver\x00E4ndert werden"
+	Vcl_Consts_SChangeWicSize,	L"The size of a WIC graphic cannot be changed"
 	Vcl_Consts_SOleGraphic,	L"Invalid operation on TOleGraphic"
 	Vcl_Consts_SUnknownExtension,	L"Unknown picture file extension (.%s)"
-	Vcl_Consts_SUnknownClipboardFormat,	L"Nicht unterst\x00FCtztes Zwischenablagenformat"
-	Vcl_Consts_SUnknownStreamFormat,	L"Nicht unterst\x00FCtztes Stream-Format"
-	Vcl_Consts_SOutOfResources,	L"Systemressourcen ersch\x00F6pft"
-	Vcl_Consts_SNoCanvasHandle,	L"Canvas erlaubt kein Zeichnen"
-	Vcl_Consts_SInvalidTextFormatFlag,	L"Das Textformat-Flag '%s' wird nicht unterst\x00FCtzt"
-	Vcl_Consts_SInvalidFrameIndex,	L"Ung\x00FCltiger Bild-Frame-Index %d: es sind %d Frames vorhanden (0-%d)"
+	Vcl_Consts_SUnknownClipboardFormat,	L"Clipboard format not supported"
+	Vcl_Consts_SUnknownStreamFormat,	L"Stream format not supported"
+	Vcl_Consts_SOutOfResources,	L"System resources exhausted"
+	Vcl_Consts_SNoCanvasHandle,	L"Canvas does not allow characters"
+	Vcl_Consts_SInvalidTextFormatFlag,	L"The text format flag '%s' is not supported"
+	Vcl_Consts_SInvalidFrameIndex,	L"Invalid picture frame index %d: there are %d frames available (0-%d)"
 	Vcl_Consts_SInvalidImageSize,	L"Invalid image size"
 	Vcl_Consts_SInvalidImageList,	L"Invalid ImageList"
 	Vcl_Consts_SReplaceImage,	L"Unable to Replace Image"
-	Vcl_Consts_SInsertImage,	L"Bild kann nicht eingef\x00FCgt werden"
-	System_RTLConsts_SWinRTInstanceError,	L"Instanz der Klasse %s kann nicht erstellt werden"
-	System_RTLConsts_sObserverUnsupported,	L"Observer wird nicht unterst\x00FCtzt"
+	Vcl_Consts_SInsertImage,	L"Image cannot be inserted"
+	System_RTLConsts_SWinRTInstanceError,	L"Instance of class %s cannot be created"
+	System_RTLConsts_sObserverUnsupported,	L"Observer is not supported"
 	System_RTLConsts_sObserverMultipleSingleCast,	L"Der Observer-Kollektion k\x00F6nnen nicht mehrere Einfach-Typumwandlungs-Observer hinzugef\x00FCgt werden"
 	System_RTLConsts_sObserverNoInterface,	L"Das Objekt implementiert das Observer-Interface nicht"
 	System_RTLConsts_sObserverNoSinglecastFound,	L"Der Observer-Kollektion wurde kein Einfach-Typumwandlungs-Observer mit der ID %d hinzugef\x00FCgt"
@@ -806,8 +806,8 @@ BEGIN
 	System_RTLConsts_sObserverNotAvailable,	L"Observer ist nicht verf\x00FCgbar"
 	System_RTLConsts_SInvalidDateString,	L"Invalid date string: %s"
 	System_RTLConsts_SInvalidTimeString,	L"Invalid time string: %s"
-	System_RTLConsts_SInvalidOffsetString,	L"Ung\x00FCltiger Zeit-Offset-String: %s"
-	System_RTLConsts_sMustWaitOnOneEvent,	L"Es muss auf mindestens ein Ereignis gewartet werden"
+	System_RTLConsts_SInvalidOffsetString,	L"Invalid time offset string: %s"
+	System_RTLConsts_sMustWaitOnOneEvent,	L"Waiting for at least one event"
 	System_RTLConsts_sBeginInvokeDestroying,	L"BeginInvoke kann bei der Freigabe f\x00FCr TComponent nicht aufgerufen werden"
 	Vcl_Consts_SInvalidBitmap,	L"Bitmap image is not valid"
 	Vcl_Consts_SInvalidIcon,	L"Icon image is not valid"
@@ -851,21 +851,21 @@ BEGIN
 	System_RTLConsts_sTimespanValueCannotBeNan,	L"Wert darf nicht NaN"
 	System_RTLConsts_sCannotNegateTimespan,	L"Negation des Minimalwertes einer Zeitspanne ist ung\x00FCltig"
 	System_RTLConsts_sInvalidTimespanFormat,	L"Ung\x00FCltiges TimeSpan-Format"
-	System_RTLConsts_sTimespanElementTooLong,	L"TimeSpan-Element zu lang"
+	System_RTLConsts_sTimespanElementTooLong,	L"TimeSpan element too long"
 	System_RTLConsts_SNoContext,	L"No context-sensitive help installed"
-	System_RTLConsts_SNoContextFound,	L"Keine Hilfe f\x00FCr Kontext %d gefunden"
+	System_RTLConsts_SNoContextFound,	L"No help available for context %d"
 	System_RTLConsts_SNoIndex,	L"Unable to open Index"
 	System_RTLConsts_SNoSearch,	L"Unable to open Search"
 	System_RTLConsts_SNoTableOfContents,	L"Unable to find a Table of Contents"
 	System_RTLConsts_SNoTopics,	L"No topic-based help system installed"
 	System_RTLConsts_SNothingFound,	L"No help found for %s"
 	System_RTLConsts_SArgumentOutOfRange,	L"Argument outside range"
-	System_RTLConsts_SArgumentNil,	L"Argument may not be nil"
-	System_RTLConsts_SThreadExternalCheckTerminated,	L"CheckTerminated kann nicht f\x00FCr einen extern erstellten Thread aufgerufen werden"
-	System_RTLConsts_SThreadExternalSetReturnValue,	L"SetReturnValue kann nicht f\x00FCr einen extern erstellten Thread aufgerufen werden"
-	System_RTLConsts_SParamIsNil,	L"Parameter %s darf nicht Nil sein"
-	System_RTLConsts_SParamIsNegative,	L"Parameter %s darf kein negativer Wert sein"
-	System_RTLConsts_SInputBufferExceed,	L"Eingabepuffer f\x00FCr %s = %d, %s = %d \x00FCberschritten"
+	System_RTLConsts_SArgumentNil,	L"Argument may not be Nil"
+	System_RTLConsts_SThreadExternalCheckTerminated,	L"CheckTerminated cannot be called for an external created thread"
+	System_RTLConsts_SThreadExternalSetReturnValue,	L"SetReturnValue cannot be called for an external created thread"
+	System_RTLConsts_SParamIsNil,	L"Parameter %s must not be Nil"
+	System_RTLConsts_SParamIsNegative,	L"Parameter %s must not be a negative value"
+	System_RTLConsts_SInputBufferExceed,	L"Input buffer for %s = %d, %s = %d exceeded"
 	System_RTLConsts_SInvalidCharsInPath,	L"Invalid characters in the path name"
 	System_RTLConsts_SInvalidCharsInFileName,	L"Invalid characters in the file name"
 	System_RTLConsts_SEmptyFileName,	L"Filename is empty"
@@ -873,10 +873,10 @@ BEGIN
 	System_RTLConsts_SDriveNotFound,	L"The drive was not found"
 	System_RTLConsts_hNoFilterViewer,	L"No help viewer that supports filters"
 	System_RTLConsts_sArgumentInvalid,	L"Invalid argument"
-	System_RTLConsts_sInvalidStringAndObjectArrays,	L"Die L\x00E4nge von String- und Objekt-Arrays muss gleich sein"
-	System_RTLConsts_sSameArrays,	L"Quell- und Ziel-Arrays d\x00FCrfen nicht gleich sein"
+	System_RTLConsts_sInvalidStringAndObjectArrays,	L"The length of string and object arrays must be equal"
+	System_RTLConsts_sSameArrays,	L"Source and target arrays must not be equal"
 	System_RTLConsts_sNoConstruct,	L"Class %s is not intended to be constructed"
-	System_RTLConsts_sInvalidTimeoutValue,	L"Ung\x00FCltiger Wert f\x00FCr Zeit\x00FCberschreitung: %s"
+	System_RTLConsts_sInvalidTimeoutValue,	L"Invalid value for timeout: %s"
 	System_RTLConsts_SReadError,	L"Stream read error"
 	System_RTLConsts_SReadOnlyProperty,	L"Property is read-only"
 	System_RTLConsts_SRegCreateFailed,	L"Failed to create key %s"
@@ -892,7 +892,7 @@ BEGIN
 	System_RTLConsts_SThreadError,	L"Thread Error: %s (%d)"
 	System_RTLConsts_SThreadExternalTerminate,	L"Cannot terminate an externally created thread"
 	System_RTLConsts_SThreadExternalWait,	L"Cannot wait for an externally created thread"
-	System_RTLConsts_SThreadStartError,	L"Start kann f\x00FCr einen laufenden oder unterbrochenen Thread nicht aufgerufen werden"
+	System_RTLConsts_SThreadStartError,	L"Start cannot be called for a running or paused thread"
 	System_RTLConsts_SFCreateErrorEx,	L"Cannot create file ""%s"". %s"
 	System_RTLConsts_SFOpenErrorEx,	L"Cannot open file ""%s"". %s"
 	System_RTLConsts_SInvalidImage,	L"Invalid stream format"
@@ -903,7 +903,7 @@ BEGIN
 	System_RTLConsts_SInvalidRegType,	L"Invalid data type for '%s'"
 	System_RTLConsts_SListCapacityError,	L"List capacity out of bounds (%d)"
 	System_RTLConsts_SListCountError,	L"List count out of bounds (%d)"
-	System_RTLConsts_SListIndexError,	L"Listenindex au\x00DFerhalb des g\x00FCltigen Bereichs (%d)"
+	System_RTLConsts_SListIndexError,	L"List index outside valid range (%d)"
 	System_RTLConsts_SListIndexErrorRangeReason,	L". %s-Range is 0..%d"
 	System_RTLConsts_SListIndexErrorEmptyReason,	L". %s is empty"
 	System_RTLConsts_SMemoryStreamError,	L"Out of memory while expanding memory stream"
@@ -913,7 +913,7 @@ BEGIN
 	System_SysConst_SInvalidDestinationIndex,	L"Invalid destination index (%d)"
 	System_SysConst_SInvalidCodePage,	L"Invalid code page"
 	System_SysConst_SInvalidEncodingName,	L"Invalid coding name"
-	System_SysConst_SNoMappingForUnicodeCharacter,	L"Keine Zuordnung f\x00FCr Unicode-Zeichen in der Multibyte-Zielcodeseite vorhanden"
+	System_SysConst_SNoMappingForUnicodeCharacter,	L"No mapping for Unicode character in the target Multibyte code page found"
 	System_SysConst_SInvalidStringBaseIndex,	L"Invalid StringBaseIndex"
 	System_RTLConsts_SAncestorNotFound,	L"Ancestor for '%s' not found"
 	System_RTLConsts_SAssignError,	L"Cannot assign a %s to a %s"
@@ -924,7 +924,7 @@ BEGIN
 	System_RTLConsts_SDuplicateClass,	L"A class named %s already exists"
 	System_RTLConsts_SDuplicateItem,	L"List does not allow duplicates ($0%x)"
 	System_RTLConsts_SDuplicateName,	L"A component named %s already exists"
-	System_RTLConsts_SDuplicateString,	L"In der String-Liste sind Duplikate nicht zul\x00E4ssig"
+	System_RTLConsts_SDuplicateString,	L"Duplicates are not allowed in string list"
 	System_SysConst_SShortDayNameWed,	L"Wed"
 	System_SysConst_SShortDayNameThu,	L"Thu"
 	System_SysConst_SShortDayNameFri,	L"Fri"
@@ -988,7 +988,7 @@ BEGIN
 	System_SysConst_SMonitorLockException,	L"Object lock not owned"
 	System_SysConst_SNoMonitorSupportException,	L"Monitor support function not initialized"
 	System_SysConst_SNotImplemented,	L"Feature not implemented"
-	System_SysConst_SObjectDisposed,	L"Methode f\x00FCr freigegebenes Objekt aufgerufen"
+	System_SysConst_SObjectDisposed,	L"Method called at freed object"
 	System_SysConst_SArgumentMissing,	L"No argument for format '%s'"
 	System_SysConst_SDispatchError,	L"Variant method calls not supported"
 	System_SysConst_SReadAccess,	L"Read"
@@ -1018,7 +1018,7 @@ BEGIN
 	System_SysConst_SStackOverflow,	L"Stack overflow"
 	System_SysConst_SControlC,	L"Control-C hit"
 	System_SysConst_SPrivilege,	L"Privileged instruction"
-	System_SysConst_SException,	L"Exception %s in Modul %s bei %p.\r\n%s%s\r\n"
+	System_SysConst_SException,	L"Exception %s in module %s at %p.\r\n%s%s\r\n"
 	System_SysConst_SExceptTitle,	L"Application Error"
 	System_SysConst_SInvalidFormat,	L"Format '%s' invalid or incompatible with argument"
 	System_SysConst_SUnknown,	L"<unknown>"
